force-app/main/default/objects/Log_Configuration__c/Log_Configuration__c.object-meta.xml
<CustomObject>
    <label>Log Configuration</label>
    <nameField>
        <label>Log Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>