force-app/main/default/objects/Log_Configuration__c/fields/Auto_Archive_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Archive_Days__c</fullName>
    <description>Days after which to auto-archive</description>
    <label>Auto Archive Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>