force-app/main/default/objects/Log_Configuration__c/fields/Buffer_Size__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Size__c</fullName>
    <description>Buffer size for batch processing</description>
    <label>Buffer Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>