force-app/main/default/objects/Log_Configuration__c/fields/Class_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Class_Pattern__c</fullName>
    <description>Regex pattern for class names</description>
    <label>Class Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>