force-app/main/default/objects/Log_Configuration__c/fields/Enable_Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable detailed debug logging</description>
    <label>Enable Debug Mode</label>
    <type>Checkbox</type>
</CustomField>