force-app/main/default/objects/Log_Configuration__c/fields/Enable_Performance_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Performance_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track performance metrics</description>
    <label>Enable Performance Tracking</label>
    <type>Checkbox</type>
</CustomField>