force-app/main/default/objects/Log_Configuration__c/fields/Max_Records_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_Per_Transaction__c</fullName>
    <description>Maximum logs per transaction</description>
    <label>Max Records Per Transaction</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>