force-app/main/default/objects/Log_Configuration__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Configuration priority (lower = higher priority)</description>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>