force-app/main/default/objects/Log_Configuration__c/fields/Purge_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Purge_After_Days__c</fullName>
    <description>Days after which to purge archived logs</description>
    <label>Purge After Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>