force-app/main/default/objects/Log_Configuration__c/fields/User_Filter__c.field-meta.xml
<CustomField>
    <fullName>User_Filter__c</fullName>
    <description>User IDs to include (comma-separated)</description>
    <label>User Filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>