force-app/main/default/objects/Log_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Buffer_Size__c</columns>
    <columns>Class_Pattern__c</columns>
    <columns>Auto_Archive_Days__c</columns>
    <columns>Enable_Debug_Mode__c</columns>
    <columns>User_Filter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>